--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+Logging.level.root=INFO
+server.port=8080
+spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:mariadb://localhost:3306/cardb
+spring.datasource.username=root
+spring.datasource.password=Merl1n
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.data.rest.basePath=/api
 
