--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,9 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>cardatabase</name>
 	<description>Demo project for Spring Boot</description>
+
 	<properties>
-		<java.version>11</java.version>
+		<tomcat.version>8.0.52</tomcat.version>
 	</properties>
 
 	<dependencies>
