--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ Logging.level.root=INFO
 server.port=8080
 spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:mariadb://spp6a8ozk79xyex1:jyt2jgfdtitf3bxu@j5zntocs2dn6c3fj.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/bhxtggi8ppd9am84
-spring.datasource.username=spp6a8ozk79xyex1
-spring.datasource.password=jyt2jgfdtitf3bxu
+spring.datasource.url=jdbc:mariadb://localhost:3306/cardb
+spring.datasource.username=root
+spring.datasource.password=Merl1n
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 spring.jpa.generate-ddl=true
