--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,7 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.data.rest.basePath=/api
 
+spring.jpa.show-sql=true
+
+spring.data.rest.basePath=/api
