--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,9 @@
 
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+
 	<groupId>com.darktangle</groupId>
 	<artifactId>cardatabase</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -17,7 +22,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>15.0.2</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
@@ -74,3 +79,4 @@
 
 
 </project>
+
